--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         java-version: 1.8
+        distribution: temurin
     - name: Build with Maven
       run: mvn package 
     - name: staging
