--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v4
       with:
-        java-version: 1.8
+        java-version: 18.0.2+101
         distribution: temurin
     - name: Build with Maven
       run: mvn package 
