--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,30 +1,33 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "main", "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        java-version: 8.0.452+9
-        distribution: temurin
-    - name: Build with Maven
-      run: mvn package 
-    - name: staging
-      run: mkdir staging && cp target/*.war staging
-    - uses: actions/upload-artifact@v4
+        java-version: '17'
+        distribution: 'temurin'
+        cache: 'maven'
+
+    - name: Build and test with Maven
+      run: mvn -B clean package --file pom.xml
+
+    # 可选：上传构建产物
+    - name: Upload artifact
+      if: success()
+      uses: actions/upload-artifact@v3
       with:
-        name: Package
-        path: staging
+        name: target-artifacts
+        path: target/*.jar
