--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,8 +14,16 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
     - name: Set up JDK 17
-      uses: actions/setup-java@v4  # 升级到 v4
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -24,10 +32,9 @@ jobs:
     - name: Build and test with Maven
       run: mvn -B clean package --file pom.xml
 
-    # 使用最新版 v4 上传产物
     - name: Upload artifact
       if: success()
-      uses: actions/upload-artifact@v4  # 关键更新点
+      uses: actions/upload-artifact@v4
       with:
         name: target-artifacts
         path: target/*.jar
