--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Diagnostics
 
 on:
   push:
@@ -14,14 +14,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -29,8 +21,23 @@ jobs:
         distribution: 'temurin'
         cache: 'maven'
 
-    - name: Build and test with Maven
-      run: mvn -B clean package --file pom.xml
+    - name: Diagnostic - Dependency Tree
+      run: mvn dependency:tree -Dverbose > dependency-tree.log
+      
+    - name: Upload Dependency Tree
+      uses: actions/upload-artifact@v4
+      with:
+        name: dependency-tree
+        path: dependency-tree.log
+
+    - name: Build with Minify Workaround
+      run: |
+        # 尝试修复依赖
+        mvn dependency:get -Dartifact=org.codehaus.plexus:plexus-utils:3.4.2
+        mvn dependency:get -Dartifact=com.google.guava:guava:32.1.2-jre
+        
+        # 构建项目（带跳过选项）
+        mvn -B clean package -DskipMinify
 
     - name: Upload artifact
       if: success()
