--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,47 +1,38 @@
-name: Java CI with Diagnostics
+name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main", "develop" ] # Trigger on pushes to main and develop branches
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main", "develop" ] # Trigger on pull requests targeting main and develop
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4 # Action to check out your repository code
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: 'maven'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17' # Specify the Java version. You can change this to '11', '21', etc.
+          distribution: 'temurin' # Recommended distribution for OpenJDK
+          cache: maven # Cache Maven dependencies to speed up builds
 
-    - name: Diagnostic - Dependency Tree
-      run: mvn dependency:tree -Dverbose > dependency-tree.log
-      
-    - name: Upload Dependency Tree
-      uses: actions/upload-artifact@v4
-      with:
-        name: dependency-tree
-        path: dependency-tree.log
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml # Command to build your Maven project
 
-    - name: Build with Minify Workaround
-      run: |
-        # 尝试修复依赖
-        mvn dependency:get -Dartifact=org.codehaus.plexus:plexus-utils:3.4.2
-        mvn dependency:get -Dartifact=com.google.guava:guava:32.1.2-jre
-        
-        # 构建项目（带跳过选项）
-        mvn -B clean package -DskipMinify
+      - name: Run Maven Tests
+        run: mvn -B test --file pom.xml # Command to run your Maven tests
 
-    - name: Upload artifact
-      if: success()
-      uses: actions/upload-artifact@v4
-      with:
-        name: target-artifacts
-        path: target/*.jar
+      # Optional: Upload build artifacts (e.g., JAR/WAR files)
+      - name: Upload a build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: your-app-artifact
+          path: target/*.jar # Adjust this path to your actual artifact (e.g., target/*.jar, target/*.war)
+          retention-days: 5 # How long to keep the artifact (optional)
+
+  
