--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,38 +1,42 @@
-name: Java CI with Maven
+name: Build Virtual Judge WAR
 
 on:
   push:
-    branches: [ "main", "develop" ] # Trigger on pushes to main and develop branches
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "develop" ] # Trigger on pull requests targeting main and develop
+    branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4 # Action to check out your repository code
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17' # Specify the Java version. You can change this to '11', '21', etc.
-          distribution: 'temurin' # Recommended distribution for OpenJDK
-          cache: maven # Cache Maven dependencies to speed up builds
+    - name: Set up JDK 8
+      uses: actions/setup-java@v4
+      with:
+        java-version: '8'
+        distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml # Command to build your Maven project
+    - name: Cache local Maven repository
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven
 
-      - name: Run Maven Tests
-        run: mvn -B test --file pom.xml # Command to run your Maven tests
+    - name: Install plexus-utils manually (for minify plugin)
+      run: |
+        mvn dependency:get -Dartifact=org.codehaus.plexus:plexus-utils:3.3.0
 
-      # Optional: Upload build artifacts (e.g., JAR/WAR files)
-      - name: Upload a build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: your-app-artifact
-          path: target/*.jar # Adjust this path to your actual artifact (e.g., target/*.jar, target/*.war)
-          retention-days: 5 # How long to keep the artifact (optional)
+    - name: Build WAR package with Maven
+      run: mvn -B clean package --file pom.xml
 
- 
+    - name: Archive WAR
+      uses: actions/upload-artifact@v4
+      with:
+        name: virtual-judge.war
+        path: target/virtual-judge.war
